force-app/main/default/objects/Freight_Revenue__c/Freight_Revenue__c.object-meta.xml
<CustomObject>
    <description>To Hold the Freight revenue to get the account performance.</description>
    <label>Freight Revenue</label>
    <nameField>
        <displayFormat>{YY}{MM}{000000000}</displayFormat>
        <label>Freight Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freight Revenue</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>