force-app/main/default/objects/Freight_Revenue__c/fields/AWB__c.field-meta.xml
<CustomField>
    <fullName>AWB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AWB</label>
    <length>11</length>
    <type>Text</type>
</CustomField>