force-app/main/default/objects/Freight_Revenue__c/fields/AWB_and_Date_unique__c.field-meta.xml
<CustomField>
    <fullName>AWB_and_Date_unique__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AWB and Date (Unique)</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>