force-app/main/default/objects/Freight_Revenue__c/fields/Charge_Weight__c.field-meta.xml
<CustomField>
    <fullName>Charge_Weight__c</fullName>
    <label>Charge Weight</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>