force-app/main/default/objects/Freight_Revenue__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <inlineHelpText>Month as 01 through to 12 each representing the calendar month.</inlineHelpText>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>