force-app/main/default/objects/Freight_Revenue__c/fields/QBR_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>QBR_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QBR Eligibility</label>
    <type>Checkbox</type>
</CustomField>