force-app/main/default/objects/Freight_Revenue__c/fields/R_Year__c.field-meta.xml
<CustomField>
    <fullName>R_Year__c</fullName>
    <description>TY reflects This Year value for that month and LY represents Last Year value for that month</description>
    <inlineHelpText>TY reflects This Year value for that month and LY represents Last Year value for that month</inlineHelpText>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TY</fullName>
                <default>true</default>
                <label>TY</label>
            </value>
            <value>
                <fullName>LY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>