force-app/main/default/objects/Freight_Revenue__c/fields/Total_Surcharges__c.field-meta.xml
<CustomField>
    <fullName>Total_Surcharges__c</fullName>
    <inlineHelpText>This is also referred as OCDC</inlineHelpText>
    <label>Total Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>