force-app/main/default/objects/Freight_Revenue__c/fields/Total_Yield__c.field-meta.xml
<CustomField>
    <fullName>Total_Yield__c</fullName>
    <formula>Total_Revenue__c  /  Charge_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>