force-app/main/default/objects/Freight_Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Account__c</columns>
    <columns>AWB__c</columns>
    <columns>Charge_Weight__c</columns>
    <columns>O_D_Pair__c</columns>
    <columns>Total_Revenue__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Freight Revenue</label>
</ListView>